--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
             <div class="col-md-6 text-center">
                 <h1 class="base-pepe">Base Pepe</h1>
                 <div class="icon-container">
-                    <a href="link1.html"><img src="tel.png" class="clickable-icon" alt="Ícone 1"></a>
-                    <a href="link2.html"><img src="tw.png" class="clickable-icon" alt="Ícone 2"></a>
+                    <a href="https://t.me/basepepesol"><img src="tel.png" class="clickable-icon" alt="Ícone 1"></a>
+                    <a href="https://x.com/basepepesol"><img src="tw.png" class="clickable-icon" alt="Ícone 2"></a>
                 </div>
             </div>
         </div>
